--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,10 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.7.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nanoid": "^3.1.18",
     "sequelize": "^6.3.5",
     "socket.io": "^2.3.0"
   }
