--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "demo-api",
+  "version": "0.50",
   "description": "",
   "main": "server.js",
   "scripts": {
