--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "js-cookie": "^3.0.1",
     "konva": "^7.1.3",
     "nanoid": "^3.1.20",
     "react": "^16.13.1",
-    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-konva": "^16.13.0-6",
     "react-router-dom": "^5.2.0",
